build-image/node/k8s_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm-taobao-org-cache
  labels:
    app: npm-taobao-org-cache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: npm-taobao-org-cache
